replaced 49 occurences of the snippet .collect(Collectors.toList()) with snippet .toList() in all of the files(17).